--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,5 @@
 header {
-  height: 400px;
+  height: 570px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -16,4 +16,10 @@ header {
 header {
   background-image: url(/images/basketball.png);
   z-index: 2;
+}
+
+.navBar {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
